fixed overflow-x not being hidden

--- a/src/app/styles/base/_layouts.scss
+++ b/src/app/styles/base/_layouts.scss
@@ -3,6 +3,7 @@ html {
 
     body {
         min-height: 100vh;
+        overflow-x: hidden;
 
         .header1 {
             min-height: 1rem;
